--- a/centerstar-automotive/package.json
+++ b/centerstar-automotive/package.json
@@ -6,9 +6,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.24.6",
     "@fontsource/inter": "^5.0.18",
+    "@mapbox/mapbox-sdk": "^0.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mapbox-gl": "^3.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
