--- a/centerstar-automotive/package.json
+++ b/centerstar-automotive/package.json
@@ -1,5 +1,6 @@
 {
   "name": "centerstar-automotive",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "resend": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
