--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lodash.debounce": "^4.0.8",
     "resend": "^3.2.0"
+  },
+  "scripts": {
+    "start": "NODE_ENV=development node server.js",
+    "start:prod": "NODE_ENV=production node server.js"
   }
 }
