--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express.js": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "resend": "^3.2.0"
   },
