--- a/centerstar-automotive/package.json
+++ b/centerstar-automotive/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
+    "@heroicons/react": "^2.1.3",
     "@mapbox/mapbox-sdk": "^0.16.0",
     "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "^5.17.0",
